# mdpaint

./: CMakeLists.txt  README.md  colorbox.cpp  colorbox.h  historyview.cpp  historyview.h  imagecontainer.cpp  imagecontainer.h  imageview.cpp  imageview.h  main.cpp  mainwindow.cpp  mainwindow.h  mdpaint.qrc  resizescaleskewdialog.cpp  resizescaleskewdialog.h  resizescaleskewtoolwrapper.cpp  resizescaleskewtoolwrapper.h  sizegrip.cpp  sizegrip.h  sizeoverlay.cpp  sizeoverlay.h  spinbox.cpp  spinbox.h  toolaction.cpp  toolaction.h  toolbox.cpp  toolbox.h
backends/cairo/: CMakeLists.txt  cairo.json.in  cairoapi.h  cairobackendfactory.cpp  cairobackendfactory.h  cairobackendplugin.cpp  cairoellipsetool.cpp  cairoellipsetool.h  cairohistoryentry.cpp  cairohistoryentry.h  cairoimagemodel.cpp  cairoimagemodel.h  cairolinetool.cpp  cairolinetool.h  cairomodel.cpp  cairomodel.h  cairopentool.cpp  cairopentool.h  cairoplugin.cpp  cairoplugin.h  cairorectangletool.cpp  cairorectangletool.h  cairoresizescaleskewtool.cpp  cairoresizescaleskewtool.h  cairosignalconnectionprivate.cpp  cairosignalconnectionprivate.h
backends/cairo/include/mdpaint/cairo/: api.h  cairobackendfactory.h  cairobackendplugin.h
backends/mdpaint/cairo2/: CMakeLists.txt  cairo2backendplugin.cpp  cairo2backendplugin.h  cairo2ellipsetool.cpp  cairo2ellipsetool.h  cairo2historyentry.cpp  cairo2historyentry.h  cairo2imagemodel.cpp  cairo2imagemodel.h  cairo2linetool.cpp  cairo2linetool.h  cairo2model.cpp  cairo2model.h  cairo2pentool.cpp  cairo2pentool.h  cairo2rectangletool.cpp  cairo2rectangletool.h  cairo2resizescaleskewtool.cpp  cairo2resizescaleskewtool.h
backends/vips/: CMakeLists.txt  vips.json.in  vipsapi.h  vipsbackendfactory.cpp  vipsbackendfactory.h  vipsbackendplugin.cpp  vipsellipsetool.cpp  vipsellipsetool.h  vipshistoryentry.cpp  vipshistoryentry.h  vipsimagemodel.cpp  vipsimagemodel.h  vipslinetool.cpp  vipslinetool.h  vipsmodel.cpp  vipsmodel.h  vipspentool.cpp  vipspentool.h  vipsplugin.cpp  vipsplugin.h  vipsrectangletool.cpp  vipsrectangletool.h  vipsresizescaleskewtool.cpp  vipsresizescaleskewtool.h  vipssignalconnectionprivate.cpp  vipssignalconnectionprivate.h  vipssvgtemplates.h
backends/vips/include/mdpaint/vips/: api.h  vipsbackendfactory.h  vipsbackendplugin.h
cmake/Modules/: FindCairo.cmake  FindCairo2.cmake  FindGraphicsMagick.cmake  FindVips.cmake
frontends/qt/: CMakeLists.txt  mdpaint.qrc  qt.json.in  qtapi.h  qtbackendfactory.cpp  qtbackendfactory.h  qtcolorbox.cpp  qtcolorbox.h  qtfrontend.cpp  qtfrontend.h  qthistoryview.cpp  qthistoryview.h  qtimagecontainer.cpp  qtimagecontainer.h  qtimagereader.cpp  qtimagereader.h  qtimageview.cpp  qtimageview.h  qtimagewriter.cpp  qtimagewriter.h  qtmainwindow.cpp  qtmainwindow.h  qtplugin.cpp  qtplugin.h  qtresizescaleskewdialog.cpp  qtresizescaleskewdialog.h  qtresizescaleskewtoolwrapper.cpp  qtresizescaleskewtoolwrapper.h  qtselectionoverlay.cpp  qtselectionoverlay.h  qtselectiontoolwrapper.cpp  qtselectiontoolwrapper.h  qtsignalconnectionprivate.cpp  qtsignalconnectionprivate.h  qtsizegrip.cpp  qtsizegrip.h  qtsizeoverlay.cpp  qtsizeoverlay.h  qtspinbox.cpp  qtspinbox.h  (+6 more)
frontends/qt/backend/: qtbackendfactory.cpp  qtbackendfactory.h  qtellipsetool.cpp  qtellipsetool.h  qthistoryentry.cpp  qthistoryentry.h  qtimagemodel.cpp  qtimagemodel.h  qtlinetool.cpp  qtlinetool.h  qtmodel.cpp  qtmodel.h  qtpentool.cpp  qtpentool.h  qtrectangletool.cpp  qtrectangletool.h  qtrectangularselectiontool.cpp  qtrectangularselectiontool.h  qtresizescaleskewtool.cpp  qtresizescaleskewtool.h
graphicsmagick/: graphicsmagickimagemodel.cpp  graphicsmagickimagemodel.h
interface/: CMakeLists.txt  backendfactory.cpp  frontend.cpp  history.cpp  imagereader.cpp  imagewriter.cpp  loader.cpp  plugin.cpp  selectiontool.cpp  signalconnection.cpp  signalconnectionprivate.cpp
interface/include/mdpaint/: api.h  backendfactory.h  ellipse.h  frontend.h  history.h  historyentry.h  imagemodel.h  imagereader.h  imagewriter.h  loader.h  plugin.h  point.h  rectangle.h  resizescaleskewtool.h  selectiontool.h  signalconnection.h  signalconnectionprivate.h  tool.h
interface/mdpaint/: CMakeLists.txt  api.h  backendfactory.h  backendplugin.cpp  backendplugin.h  history.h  historyentry.cpp  historyentry.h  imagemodel.cpp  imagemodel.h  resizescaleskewtool.cpp  resizescaleskewtool.h  signalconnection.cpp  signalconnection.h  tool.cpp  tool.h
private/: CMakeLists.txt  privateboostsignals2signalconnection.cpp  privatesignalconnection.cpp
private/include/mdpaint/private/: privateapi.h  privateboostsignals2signalconnection.h  privatesignalconnection.h
private/mdpaint/private/: CMakeLists.txt  api.h  boostsignals2signalconnectionprivate.cpp  boostsignals2signalconnectionprivate.h  signalconnectionprivate.h
